--- a/sass/modules/_footer.scss
+++ b/sass/modules/_footer.scss
@@ -14,7 +14,7 @@
 	.footer-details{
 	    color: white;
 	    text-align: left;
-	    padding-left: 30px;
+	    padding-left: $grid-gutter-width/2;
 
 	    .email-word-break{
 	    	display:inline;
